Revert "Fix build due to JDK11 Set.of not usable with source level Java8"
This reverts commit 6c6efc8b25810dab244dbea9912ec823dd17fdac.